--- a/Project03/src/main/webapp/resources/smarteditor/photo_uploader/popup/callback.html
+++ b/Project03/src/main/webapp/resources/smarteditor/photo_uploader/popup/callback.html
@@ -12,6 +12,7 @@
 		
         // execute callback script
         var sUrl = document.location.search.substr(1);
+        console.log('callback.html sUrl: ' + sUrl);
 		if (sUrl != "blank") {
 	        var oParameter = {}; // query array
 
